# pog2smtlib-2.7

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  AUTHORS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT  README.md  TODO.md
.github/workflows/: clang-format-check.yml  cmake-multi-platform.yml  dolmen-check-test-references.yml
cmake/modules/: GenerateGitInformation.cmake  GenerateVersionHeader.cmake
doc/: coverage.md
docker/: Dockerfile  HOWTO.md
scripts/: check-reference-files.sh  format-source-files.sh  utilities.sh
src/: .clang-format
src/B2SMTLIB/: CMakeLists.txt  axiom_templates.cpp  axiom_templates.h  main.cpp  prelude_builder.cpp  prelude_builder.h  smtlib.cpp  smtlib.h  utils.cpp  utils.h
src/POGLoader/: CMakeLists.txt  pog.cpp  pog.h
src/pog2smtlib-2.7/: CMakeLists.txt  axiom-templates.cpp  axiom-templates.h  bconstruct-private.h  bconstruct-utils.h  bconstruct.cpp  bconstruct.h  btype-symbols.cpp  btype-symbols.h  btype-utils.h  cc-compatibility.h  main.cpp  parameters.cpp  parameters.h  pog-signatures.cpp  pog-signatures.h  pog-translation.cpp  pog-translation.h  prelude-builder.h  prelude_builder.cpp  pure-typing.cpp  pure-typing.h  signature.cpp  signature.h  smtlib-stub.cpp  smtlib.cpp  smtlib.h  special-cases.h  symbols.cpp  symbols.h  translate-predicate.cpp  translate-predicate.h  translate-signature.cpp  translate-signature.h  translate-token.cpp  translate-token.h  type-utils.h  utils.cpp  utils.h  version.h.in
src/pog2smtlib-2.7/constructs/expression/: CMakeLists.txt  bijection.cpp  bijection.h  bool.cpp  bool.h  card.cpp  card.h  cardinals.cpp  cardinals.h  cartesianproduct.cpp  cartesianproduct.h  ceiling.cpp  ceiling.h  closure.cpp  closure.h  closure1.cpp  closure1.h  composition.cpp  composition.h  concatenation.cpp  concatenation.h  data.cpp  data.h  diff.cpp  diff.h  directproduct.cpp  directproduct.h  domain.cpp  domain.h  emptyseq.cpp  emptyseq.h  emptyset.cpp  emptyset.h  eval.cpp  eval.h  exp.cpp  exp.h  fin.cpp  fin.h  fin1.cpp  (+167 more)
src/pog2smtlib-2.7/constructs/predicate/: CMakeLists.txt  equality.cpp  equality.h  inclusion.cpp  inclusion.h  setmembership.cpp  setmembership.h  strictinclusion.cpp  strictinclusion.h
src/pog2smtlib-2.7/constructs/type/: CMakeLists.txt  cartesianproduct.cpp  cartesianproduct.h  powerset.cpp  powerset.h  type.cpp  type.h
test/: .gitignore  CMakeLists.txt  dotest.sh  output_1_0.po2  prepare.sh  setenv.sh  setenv.sh.model
test/input/application_1/: application_1.mch  input.pog
test/input/application_2/: application_2.mch  input.pog
test/input/arithmetical_expression_1/: arithmetical_expression_1.mch  input.pog
test/input/arithmetical_expression_10/: arithmetical_expression_10.mch  input.pog
test/input/arithmetical_expression_11/: arithmetical_expression_11.mch  input.pog
test/input/arithmetical_expression_12/: arithmetical_expression_12.mch  input.pog
test/input/arithmetical_expression_13/: arithmetical_expression_13.mch  input.pog
test/input/arithmetical_expression_14/: arithmetical_expression_14.mch  input.pog
test/input/arithmetical_expression_15/: arithmetical_expression_15.mch  input.pog
test/input/arithmetical_expression_16/: arithmetical_expression_16.mch  input.pog
test/input/arithmetical_expression_2/: arithmetical_expression_2.mch  input.pog
test/input/arithmetical_expression_3/: arithmetical_expression_3.mch  input.pog
test/input/arithmetical_expression_4/: arithmetical_expression_4.mch  input.pog
test/input/arithmetical_expression_5/: arithmetical_expression_5.mch  input.pog
test/input/arithmetical_expression_6/: arithmetical_expression_6.mch  input.pog
test/input/arithmetical_expression_7/: arithmetical_expression_7.mch  input.pog
test/input/arithmetical_expression_8/: arithmetical_expression_8.mch  input.pog
test/input/arithmetical_expression_9/: arithmetical_expression_9.mch  input.pog
test/input/belonging_predicate_1/: belonging_predicate_1.mch  input.pog
test/input/belonging_predicate_2/: belonging_predicate_2.mch  input.pog
test/input/bijection_1/: bijection_1.mch  input.pog
test/input/bijections_total_1/: bijections_total_1.mch  input.pog
test/input/bijections_total_2/: bijections_total_2.mch  input.pog
test/input/bool_1/: bool_1.mch  input.pog
test/input/bool_2/: bool_2.mch  input.pog
test/input/boolean_expression_1/: boolean_expression_1.mch  input.pog
test/input/boolean_expression_2/: boolean_expression_2.bxml  boolean_expression_2.mch  input.pog
test/input/building_set_bool/: building_set_bool.mch  input.pog
test/input/building_set_int_1/: building_set_int_1.mch  input.pog
test/input/building_set_int_2/: building_set_int_2.mch  input.pog
test/input/building_set_integer/: building_set_integer.mch  input.pog
test/input/building_set_integer_2/: building_set_integer_2.mch  input.pog
test/input/building_set_nat1_1/: building_set_nat1_1.mch  input.pog
test/input/building_set_nat1_2/: building_set_nat1_2.mch  input.pog
test/input/building_set_nat_1/: building_set_nat_1.mch  input.pog
test/input/building_set_nat_2/: building_set_nat_2.mch  input.pog
test/input/building_set_natural1_1/: building_set_natural1_1.mch  input.pog
test/input/building_set_natural1_2/: building_set_natural1_2.mch  input.pog
test/input/building_set_natural_1/: building_set_natural_1.mch  input.pog
test/input/building_set_natural_2/: building_set_natural_2.mch  input.pog
test/input/building_set_real/: building_set_real.mch  input.pog
test/input/building_set_string/: building_set_string.mch  input.pog
test/input/building_set_string_1/: building_set_string_1.mch  input.pog
test/input/building_set_string_2/: building_set_string_2.mch  input.pog
test/input/card_1/: card_1.mch  input.pog
test/input/card_2/: card_2.mch  input.pog
test/input/card_3/: card_3.mch  input.pog
test/input/card_4/: card_4.mch  input.pog
test/input/cartesian_product_1/: cartesian_product_1.mch  input.pog
test/input/cartesian_product_2/: cartesian_product_2.mch  (+1 more)
util/: copyright-notice.txt  help.sh
(+1210 files in other folders)
